--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "adobe-animate-canvas-umd",
   "version": "1.0.0",
   "dependencies": {
-    "minimist": "^1.2.0"
+    "createjs-easeljs": "^0.8.2",
+    "createjs-tweenjs": "^0.6.0",
+    "minimist": "^1.2.0",
   },
   "description": "A utility for wrapping Adobe Animate HTML5 canvas exports in modern web modules",
   "main": "index.js",
@@ -23,5 +25,9 @@
     "tweenjs"
   ],
   "author": "Nathan Witt <wittnl@gmail.com> (http://wi.tt/)",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "http-server": "^0.9.0",
+    "requirejs": "^2.3.2"
+  }
 }
