--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "devDependencies": {
     "http-server": "^0.9.0",
-    "requirejs": "^2.3.2"
+    "requirejs": "^2.3.2",
+    "webpack": "^1.14.0"
   }
 }
