--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "Nathan Witt <wittnl@gmail.com> (http://wi.tt/)",
   "license": "MIT",
   "devDependencies": {
+    "exports-loader": "^0.6.3",
     "http-server": "^0.9.0",
     "requirejs": "^2.3.2",
     "webpack": "^1.14.0"
