--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "exports-loader": "^0.6.3",
     "http-server": "^0.9.0",
+    "imports-loader": "^0.7.0",
     "requirejs": "^2.3.2",
     "webpack": "^1.14.0"
   }
