--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   },
   "description": "A utility for wrapping Adobe Animate HTML5 canvas exports in modern web modules",
   "main": "index.js",
-  "bin": {
-    "canvas-umd": "./bin/index.js"
-  },
+  "bin": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
