package.json / README updates

--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "umd",
     "createjs"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wittnl/adobe-animate-canvas-umd"
+  },
   "author": "Nathan Witt <wittnl@gmail.com> (http://wi.tt/)",
   "license": "MIT",
   "devDependencies": {
