--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   "license": "MIT",
   "devDependencies": {
     "exports-loader": "^0.6.3",
+    "file-loader": "^0.10.1",
     "http-server": "^0.9.0",
-    "imports-loader": "^0.7.0",
-    "requirejs": "^2.3.2",
+    "script-loader": "^0.7.0",
     "webpack": "^1.14.0"
   }
 }
