--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "main": "dist/canvas-umd.js",
   "bin": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "copy:vendor": "sh task.sh copy:vendor"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "adobe",
