--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "adobe-animate-canvas-umd",
   "version": "1.0.2",
   "dependencies": {
-    "createjs": "^1.0.1",
-    "minimist": "^1.2.0"
+    "createjs": "^1.0.1"
   },
   "description": "A utility for wrapping Adobe Animate HTML5 canvas exports in modern web modules",
   "main": "dist/canvas-umd.js",
-  "bin": {},
   "scripts": {
+    "start": "webpack-dev-server --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -27,10 +26,13 @@
   "author": "Nathan Witt <wittnl@gmail.com> (http://wi.tt/)",
   "license": "MIT",
   "devDependencies": {
-    "exports-loader": "^0.6.3",
-    "file-loader": "^0.10.1",
-    "http-server": "^0.9.0",
-    "script-loader": "^0.7.0",
-    "webpack": "^1.14.0"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "handlebars": "^4.0.11",
+    "handlebars-loader": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.16.3",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   }
 }
