--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adobe-animate-canvas-umd",
-  "version": "1.0.2",
+  "version": "2.0.0-0",
   "dependencies": {
     "createjs": "^1.0.1"
   },
