--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "dist/canvas-umd.js",
   "scripts": {
     "start": "webpack-dev-server --hot",
-    "test": "exit 0"
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
   "keywords": [
     "adobe",
