--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adobe-animate-canvas-umd",
-  "version": "3.0.0-1",
+  "version": "3.0.0",
   "dependencies": {
     "createjs": "^1.0.1"
   },
